Adding train scheduler project

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,8 @@ margin-left: 20px;
               <hr>
               <div class="row">
                     <div class="col-6">
-                            <img class="img-fluid" src="./images/Hangman.png" alt="ProfilePic" width="200px" height="200px" >
-                            </div>
+                            <a href="https://mikegomez.github.io/train_scheduler/"><img class="img-fluid" src="../train_scheduler/images/mercurytrains.jpg" alt="Train Scheduler" width="200px" height="200px" >
+                            <p><strong>Train Scheduler</strong></p></div></a>
                     <div class="col-6">
                            <img class="img-fluid"  src="./images/Widget.png" alt="ProfilePic" width="200px" height="200px">
                         </div>
